[MOD]support `swap` without effects on pool state.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,10 @@
         "typeindex": "cpp",
         "unordered_set": "cpp",
         "valarray": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "numbers": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
