--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,8 @@
         "unordered_map": "cpp",
         "list": "cpp",
         "xhash": "cpp",
-        "bitset": "cpp"
+        "bitset": "cpp",
+        "cassert": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
