[MOD] 速度测试写了一半。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,18 @@
         "list": "cpp",
         "xhash": "cpp",
         "bitset": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "array": "cpp",
+        "*.tcc": "cpp",
+        "cstdarg": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "functional": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "string_view": "cpp",
+        "numbers": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
