[MOD + FIX] 处理events队列。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,11 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "cinttypes": "cpp",
+        "chrono": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
